# terminal-ce

./: .gitignore  CMakeLists.txt  makefile  readme.md
fonts/: gohufont-11.fnt  gohufont-11.fon  gohufont-11b.fnt  gohufont-11b.fon  makefile  tomthumb4x6-6.fnt
src/: escape.c  escape.h  graphics.c  graphics.h  input.c  input.h  main.c  menu.c  menu.h  palette.c  palette.h  serial.c  serial.h  settings.c  settings.h  terminal.c  terminal.h
src/gfx/: convimg.yaml  convpng.ini
